<resources>
    <string name="app_name">myCPE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="percentage_value">50%</string>
    <string name="bearer">Bearer</string>
    <string name="accept">application/json</string>
    <string name="str_signup_first_name">fname</string>
    <string name="str_signup_last_name">lname</string>
    <string name="str_signup_email_id">emailid</string>
    <string name="str_signup_phone_number">phone number</string>
    <string name="str_signup_password">password</string>
    <string name="str_signup_confirm_password">confirm password</string>
    <string name="str_signup_country_id">country id</string>
    <string name="str_signup_state_id">state id</string>
    <string name="str_signup_city_id">city id</string>
    <string name="str_signup_country_pos">country pos</string>
    <string name="str_signup_state_pos">state pos</string>
    <string name="str_signup_city_pos">city pos</string>
    <string name="progrees_msg">Please Wait</string>
    <string-array name="nav_item_activity_titles">
        <item>DashBoard</item>
        <item>Change Password</item>
        <item>Profile</item>
        <item>Contact Us</item>
        <item>Instructor</item>
        <item>Company</item>
        <item>My Favorites</item>


    </string-array>
    <string name="please_check_internet_condition">Please Check Internet Connection.</string>
    <string name="device_token">device token</string>
    <string name="device_i">device id</string>
    <string name="no_data_found">No Data Available</string>
    <string name="exit_validation">Are you sure you want to Exit?</string>
    <string name="valid_email">Please Enter Valid Email Address</string>
    <string name="logout_text">Are you sure you want to Logout?</string>
    <string name="password_regex_validation">Please enter password atleast 6 characters including 1 uppercase,1 lowercase &amp; 1 number.</string>
    <string name="password_length">Password must be at least 6 characters.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="cpe">CPE</string>
    <string name="views">views</string>
    <string name="register">REGISTER</string>
    <string name="favorite">Favorite</string>
    <string name="retry">Retry</string>
    <string name="guest_user_msg">Please Login</string>
    <string name="str_comming_soon">Comming Soon</string>
    <string name="str_guest_user_dialog_msg">Login or Register to access full feature.</string>
    <string name="str_guest_user_dialog_title">MY CPE</string>
    <string name="str_login_guest">Login</string>
    <string name="str_cancel_guest">Cancel</string>
    <string name="str_sharing_not_avilable">Sharing link is not avilable.</string>
    <string name="str_joinlink_not_avilable">Join link is not avilable.</string>
    <string name="str_time_zone_not_found">Time Zone not Found</string>
    <string name="str_btn_next">NEXT</string>
    <string name="check_validation_popup_topics">Do you want to add your topic of interests?</string>
    <string name="str_skip">SKIP</string>
    <string name="str_download_link_not_found">Download link not found</string>
    <string name="str_certificate_link_not_found">Certificate not found</string>
    <string name="str_who_should_attend_lable">Who Should Attend</string>
    <string name="str_next">Next</string>
    <string name="str_done">Done</string>
    <string name="str_goto_meeting_link">GoTo Meeting Link is not Available.</string>
    <string name="str_video_validation">Please Register the Webinar.</string>
    <string name="str_video_link_not_avilable">video link is not avilable.</string>
    <string name="topics_selected">topics</string>
    <string name="str_signup">SIGN UP</string>
    <string name="str_login">SIGN IN</string>
    <string name="str_logi_now">LOGIN</string>
    <string name="str_contactus">Contact Us</string>
    <string name="str_profile_picture">Profile Picture</string>
    <string name="str_profile_username">Profile Username</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="do_not_have_account">Don"'"t have an account?</string>
    <string name="register_now_login">SIGN UP</string>
    <string name="validate_email_id">Please Enter Email Address</string>
    <string name="validate_password">Please Enter Password</string>
    <string name="str_token">login token</string>
    <string name="str_emailid">emailid</string>
    <string name="str_walk_through_screen">walkscreen</string>
    <string name="str_create_account">Create an Account</string>
    <string name="str_completed">COMPLETED</string>
    <string name="str_ongoing">ONGOING</string>
    <string name="str_upcoming">UPCOMING</string>
    <string name="str_total_credit">Total Credit</string>
    <string name="str_my_favorites">My Favorites</string>
    <string name="str_home_title">Webinars</string>
    <string name="str_home_title_detail">Webinar</string>
    <string name="str_all">ALL</string>
    <string name="str_my_webinar">MY WEBINAR</string>
    <string name="str_live">LIVE</string>
    <string name="str_self_study">ON-DEMAND</string>
    <string name="str_archive">ARCHIVED</string>
    <string name="str_favorite">FAVAROITE</string>
    <string name="str_price_status">FREE</string>
    <string name="str_credit_score">1 CREDIT</string>
    <string name="str_webinar_status">RESUME</string>
    <string name="str_webinar_type">SELF STUDY</string>
    <string name="str_filter_live">live</string>
    <string name="str_filter_selfstudy">self_study</string>
    <string name="str_self_study_on_demand">ON-DEMAND</string>
    <string name="str_filter_archieve">Archieve</string>
    <string name="str_filter_favourite">Favourite</string>
    <string name="str_filter_webinar">MyWebinar</string>
    <string name="str_filter_home_live">live</string>
    <string name="str_filter_home_self_study">self-study</string>
    <string name="str_filter_home_fields_of_study">fields_of_study</string>
    <string name="str_filter_home_price_free">free</string>
    <string name="str_filter_home_price_premium">premium</string>
    <string name="str_filter_home_date_filter">date_filter</string>
    <string name="view_profile_firstname">First Name</string>
    <string name="view_profile_lastname">Last Name</string>
    <string name="view_profile_email">Email</string>
    <string name="view_profile_firm_name">Firm Name</string>
    <string name="view_profile_mobile_number">Mobile Number</string>
    <string name="view_profile_ptin_number">PTIN Number</string>
    <string name="view_profile_country">Country</string>
    <string name="view_profile_state">State</string>
    <string name="view_profile_city">City</string>
    <string name="view_profile_zipcode">Zipcode</string>
    <string name="view_profile_topics_interest">Topics of Interest</string>
    <string name="view_profile_who_you_are">Who you are?</string>
    <string name="edit_profile_header">Edit Profile</string>
    <string name="view_profile_job_title">Job Title</string>
    <string name="view_profile_industry">Industry</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_change_password_submit">SUBMIT</string>
    <string name="str_old_password">Old  Password</string>
    <string name="str_new_password">New  Password</string>
    <string name="validate_oldpassword">Please Enter Old Password</string>
    <string name="validate_newpassword">Please Enter New Password</string>
    <string name="validate_confirmpassword">Please Enter Confirm Password</string>
    <string name="val_new_confirm_password_not_match">New Password and Confirm Password does not match</string>
    <string name="payment_validate_msg">To Register this webinar please visit our web application and complete your payment.</string>
    <string name="loading_video">Loading video</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="forgot_password_submit_button">SUBMIT</string>
    <string name="forgot_edit_email">Enter Your Email Address</string>
    <string name="forgot_header_text">Please Enter Your Registered Email</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_id">Email</string>
    <string name="contact_message">Message</string>
    <string name="subject">Subject</string>
    <string name="contact_send">SEND</string>
    <string name="str_need_help">Need Help?</string>
    <string name="str_address">Patel Society</string>
    <string name="str_number">+18002800282</string>
    <string name="str_contactus_emailid">hello@entigrity.com</string>
    <string name="str_or">OR</string>
    <string name="str_register">REGISTER</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_mobil_number">Mobile Number</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_email_id">Email ID</string>
    <string name="str_topics_interset">Topics of Interest</string>
    <string name="str_who_you_are">Professional  Credentials?</string>
    <string name="str_profestional_credential">Professional  Credentials</string>
    <string name="str_additional_qualification">Additional Qualifications</string>
    <string name="str_topic_home">Topics</string>
    <string name="str_reg_password">Password</string>
    <string name="str_reg_confirm_password">Confirm Password</string>
    <string name="str_firm_name">Company Name</string>
    <string name="str_alredy_account">Already have an account?</string>
    <string name="str_login_now">SIGN IN</string>
    <string name="str_accepted">I accept these</string>
    <string name="str_accepted_condition">Terms and Conditions</string>
    <string name="str_other_option">Please select other option</string>
    <string name="str_select_country">Select Country</string>
    <string name="str_select_state">Select State</string>
    <string name="str_select_city">Select City</string>
    <string name="str_lable_apply">APPLY</string>
    <string name="str_lable_cancel">CANCEL</string>
    <string name="str_search">Search</string>
    <string name="val_firstname">Please Enter First Name</string>
    <string name="val_lastname">Please Enter Last Name</string>
    <string name="val_emailid">Please Enter Email Address</string>
    <string name="val_emailid_pattern">Please Enter Valid Email Address</string>
    <string name="val_phone_number">Please Enter Phone Number</string>
    <string name="val_phone_validate">Please Enter Phone Number in 10 digits</string>
    <string name="val_password_register">Please Enter Password</string>
    <string name="logout">Are you sure you want to Logout?</string>
    <string name="str_basic_management">Basic Time Management Course</string>
    <string name="ok">OK</string>
    <string name="str_payment_date_label">Payment Date:</string>
    <string name="str_payment_date">13/02/2019</string>
    <string name="transcation_str_live">Live</string>
    <string name="transcation_cost">$25.00</string>
    <string name="str_trx_label">Trx ID#:</string>
    <string name="str_trx_value">127856</string>
    <string name="str_payment_status">Success</string>
    <string name="str_download_receipt"><u>Download Receipt</u></string>
</resources>