<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header"
    android:background="@color/drawer_header"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/ivprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@mipmap/menu_user" />

    <com.entigrity.view.CustomTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_toRightOf="@+id/ivprofile"
        android:text="@string/nav_header_title"
        android:textColor="@color/White"
        app:font_text="SFUIDisplay-Bold.ttf" />

    <com.entigrity.view.CustomTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_toRightOf="@+id/ivprofile"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/White"
        app:font_text="SFUIDisplay-Medium.ttf" />

</RelativeLayout>
