<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="fragment"
            type="com.entigrity.fragments.ChangePasswordFragment" />
    </data>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White">

        <RelativeLayout
            android:id="@+id/rel_change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/theme_background">


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_change_password"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_minus50sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/rounded_background_white"
            android:padding="@dimen/_20sdp">


            <com.entigrity.view.CustomEditTextView
                android:id="@+id/edt_oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/str_old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                app:font_edit="SFUIDisplay-Medium.ttf"


                />

            <com.entigrity.view.CustomEditTextView
                android:id="@+id/edt_newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_oldpassword"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/str_new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                app:font_edit="SFUIDisplay-Medium.ttf" />




            <com.entigrity.view.CustomEditTextView
                android:id="@+id/edt_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_newpassword"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/str_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                app:font_edit="SFUIDisplay-Medium.ttf" />


            <com.entigrity.view.CustomButtonView
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_confirmpassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/rounded_button"
                android:text="@string/str_change_password_submit"
                android:textColor="@color/White"
                app:font_button="SFUIDisplay-Bold.ttf"

                />


        </RelativeLayout>


    </RelativeLayout>


</layout>