<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/guest_user_background"
        android:orientation="vertical">

        <com.entigrity.view.CustomTextView
            android:id="@+id/popup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/str_guest_user_dialog_title"
            android:textColor="@color/feedback_title"
            android:textSize="@dimen/_15sdp"
            app:font_text="SFUIDisplay-Bold.ttf" />

        <com.entigrity.view.CustomTextView
            android:id="@+id/popup_detail_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/popup_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/check_validation_popup_topics"
            android:textColor="@color/feedback_title"
            android:textSize="@dimen/_12sdp"
            app:font_text="SFUIDisplay-Bold.ttf" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_above="@+id/lv_bottom"
            android:background="@color/guest_button_color"></View>

        <LinearLayout
            android:id="@+id/lv_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <com.entigrity.view.CustomTextView
                    android:id="@+id/tv_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/str_skip"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15sdp"
                    app:font_text="SFUIDisplay-Bold.ttf" />

            </LinearLayout>

            <View
                android:id="@+id/view_verticall"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_above="@+id/lv_bottom"
                android:background="@color/guest_button_color"></View>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <com.entigrity.view.CustomTextView
                    android:id="@+id/tv_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/Yes"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15sdp"
                    app:font_text="SFUIDisplay-Bold.ttf" />
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>