<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@color/White">

        <RelativeLayout
            android:id="@+id/rel_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/drawer_header"
            android:padding="@dimen/_5sdp">


            <com.entigrity.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/str_topics_interset"
                android:textColor="@color/White"
                android:textSize="@dimen/_15sdp"
                app:font_text="SFUIDisplay-Medium.ttf" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_serach"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/rel_top"
            android:background="@color/background_topics"
            android:gravity="center_vertical"
            android:padding="@dimen/_5sdp">

            <com.entigrity.view.CustomEditTextView
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/bg_edittext_icon"
                android:drawableLeft="@mipmap/search"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/str_search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingLeft="@dimen/_5sdp"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp"
                app:font_edit="SFUIDisplay-Medium.ttf" />


        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_topics_interest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rvbottom"
            android:layout_below="@+id/rel_serach">

        </android.support.v7.widget.RecyclerView>


        <RelativeLayout
            android:id="@+id/rvbottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/drawer_header"
            android:padding="@dimen/_2sdp">


            <com.entigrity.view.CustomTextView
                android:id="@+id/tv_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/_40sdp"
                android:text="@string/str_lable_apply"
                android:textColor="@color/White"
                android:textSize="@dimen/_15sdp"
                app:font_text="SFUIDisplay-Bold.ttf" />

            <View

                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerInParent="true"
                android:background="@color/White" />


            <com.entigrity.view.CustomTextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_40sdp"
                android:text="@string/str_lable_cancel"
                android:textColor="@color/White"
                android:textSize="@dimen/_15sdp"
                app:font_text="SFUIDisplay-Bold.ttf" />


        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>